crates/ferrum-interfaces/tests/ui/vnext/fail/resource_commit_outcome_cannot_be_constructed.rs
use ferrum_interfaces::vnext::*;

fn forge(buffer: Vec<u8>, descriptor: BufferDescriptor) {
    let _ = ResourceCommitOutcome::new(
        ResourceId::new("resource.forged").unwrap(),
        1,
        descriptor,
        buffer,
    );
}

fn main() {}
